# os

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  README.md  limine.conf  linker.ld  rust-toolchain.toml
.cargo/: config.toml
src/: boot.asm  kernel.c  lib.rs
